arreglo indice metadata arg

--- a/analisis/codigos/calculo_renta_hidrocarburos.Rmd
+++ b/analisis/codigos/calculo_renta_hidrocarburos.Rmd
@@ -5257,14 +5257,14 @@ writexl::write_xlsx(list(sum_mecanismos = renta_indirecto[,c(1:13, 17)] %>% filt
                          regalias = regalias_usd,
                          retenciones = retenciones_crudo,
                          subsidios = subsidios_hidrocarburos,
-                         "renta empresas" = renta_empresas_balances,
-                         renta_balances = renta_produccion_balances  , 
+                         tg_total =renta_tg,
+                         tg_empresas = renta_empresas_balances,
+                         renta_x_emp = renta_produccion_balances  , 
                          ccnn_oficial = ccnn_oficial,
                          criterio_ccnn=criterio_ccnn,
                          empalme_ccnn=empalme_ccnn,
                          criterio_propio =criterio_propio ,
                          comparacion_autores = renta_autores , 
-                         tg_total =renta_tg,
                            stock_balances = stock_balances_empresas,
                          segmento_YPF_PetBR =union_segmentos,
                          costos_comparacion = costos_comparacion ,
