--- a/analisis/codigos/calculo_renta_hidrocarburos.Rmd
+++ b/analisis/codigos/calculo_renta_hidrocarburos.Rmd
@@ -5259,14 +5259,13 @@ writexl::write_xlsx(list(sum_mecanismos = renta_indirecto[,c(1:13, 17)] %>% filt
                          subsidios = subsidios_hidrocarburos,
                          tg_total =renta_tg,
                          tg_empresas = renta_empresas_balances,
-                         renta_x_emp = renta_produccion_balances  , 
+                         stock_balances = stock_balances_empresas,
+                         segmento_YPF_PetBR =union_segmentos,
                          ccnn_oficial = ccnn_oficial,
-                         criterio_ccnn=criterio_ccnn,
+                         criterio_ccnn=criterio_ccnn %>% select(-c(ci_tot , ci_extr)) ,
                          empalme_ccnn=empalme_ccnn,
                          criterio_propio =criterio_propio ,
                          comparacion_autores = renta_autores , 
-                           stock_balances = stock_balances_empresas,
-                         segmento_YPF_PetBR =union_segmentos,
                          costos_comparacion = costos_comparacion ,
                           costos_ccnn=costos),
                     path = "../resultados/argentina/renta_de_la_tierra_hidrocarburifera_arg.xlsx")
